tests/snapshots/snapshot_ir_translations__openai_ir__openai_ir_roundtrip_request.snap
---
source: tests/snapshot_ir_translations.rs
expression: "&back"
---
{
  "model": "gpt-4o",
  "messages": [
    {
      "role": "user",
      "content": [
        {
          "type": "text",
          "text": "Hello world"
        }
      ]
    }
  ],
  "max_tokens": 512,
  "sampling": {},
  "stream": {
    "enabled": false
  }
}
