tests/snapshots/snapshot_ir_translations__openai_ir__openai_ir_roundtrip_response.snap
---
source: tests/snapshot_ir_translations.rs
expression: "&back"
---
{
  "id": "resp-001",
  "model": "gpt-4o",
  "choices": [
    {
      "index": 0,
      "message": {
        "role": "assistant",
        "content": [
          {
            "type": "text",
            "text": "Hello from the assistant"
          }
        ]
      },
      "finish_reason": "stop"
    }
  ],
  "usage": {
    "prompt_tokens": 10,
    "completion_tokens": 5,
    "total_tokens": 15
  }
}
