tests/snapshots/snapshot_ir_translations__openai_ir__openai_stream_final_to_ir.snap
---
source: tests/snapshot_ir_translations.rs
expression: "&ir_chunks"
---
[
  {
    "id": "chatcmpl-stream",
    "model": "gpt-4o",
    "index": 0,
    "finish_reason": "stop"
  }
]
