tests/snapshots/snapshot_ir_translations__openai_ir__openai_tool_call_response_to_ir.snap
---
source: tests/snapshot_ir_translations.rs
expression: "&ir"
---
{
  "id": "chatcmpl-tool",
  "model": "gpt-4o",
  "choices": [
    {
      "index": 0,
      "message": {
        "role": "assistant",
        "tool_calls": [
          {
            "id": "call_abc",
            "name": "get_weather",
            "arguments": {
              "city": "London"
            }
          }
        ]
      },
      "finish_reason": "tool_use"
    }
  ],
  "usage": {
    "prompt_tokens": 50,
    "completion_tokens": 20,
    "total_tokens": 70
  }
}
